build/log/idf_py_stderr_output_13125
/home/zeng/share/gateway/LowConfGateway/main/hello_world_main.c: In function 'app_main':
/home/zeng/share/gateway/LowConfGateway/main/hello_world_main.c:628:45: error: 'Gateway' has no member named 'address'; did you mean 'ethAddress'?
  628 |             strcpy(config.address, gateway->address);
      |                                             ^~~~~~~
      |                                             ethAddress
/home/zeng/share/gateway/LowConfGateway/main/hello_world_main.c:629:45: error: 'Gateway' has no member named 'netmask'; did you mean 'ethNetmask'?
  629 |             strcpy(config.netmask, gateway->netmask);
      |                                             ^~~~~~~
      |                                             ethNetmask
/home/zeng/share/gateway/LowConfGateway/main/hello_world_main.c:630:45: error: 'Gateway' has no member named 'gateway'; did you mean 'ethGateway'?
  630 |             strcpy(config.gateway, gateway->gateway);
      |                                             ^~~~~~~
      |                                             ethGateway
make[3]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/build.make:76：esp-idf/main/CMakeFiles/__idf_main.dir/hello_world_main.c.obj] 错误 1
make[3]: *** 正在等待未完成的任务....
make[2]: *** [CMakeFiles/Makefile2:5751：esp-idf/main/CMakeFiles/__idf_main.dir/all] 错误 2
make[1]: *** [CMakeFiles/Makefile2:2455：CMakeFiles/flash.dir/rule] 错误 2
make: *** [Makefile:312：flash] 错误 2
